# auto-mind-examples

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
datasets/: hymenoptera_data.py  names_data.py  penn_fudan_data.py  translation_data.py
lib/: data_utils.py  dataset_data.py  metrics.py
src/: __init__.py
src/datasets/: hymenoptera_data.py  names_data.py  penn_fudan_data.py  translation_data.py
src/lib/: data_utils.py  dataset_data.py  metrics.py
supervised/: char_rnn_classification.ipynb  char_rnn_generation.ipynb  quickstart.ipynb  quickstart_detailed.ipynb  seq2seq_translation.ipynb  spatial_transformer.ipynb  text_sentiment_ngrams.ipynb  torchvision_tutorial.ipynb  transfer_learning.ipynb  translation_transformer.ipynb
supervised/torchvision_tutorial/: coco_eval.py  coco_utils.py  transforms.py  utils.py
test/: tests.py
test/supervised/: test.py
test/train/: .gitignore  char_rnn_generation.ipynb  quickstart_detailed.ipynb  torchvision_tutorial.ipynb  transfer_learning.ipynb  translation_transformer.ipynb
test/train/torchvision_tutorial/: engine.py
